z-index and positions for 3d fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,7 +81,7 @@ body {
 
   /* projects section  */
   .arrow-btn {
-    @apply w-10 h-10 p-3 cursor-pointer active:scale-95 transition-all rounded-full arrow-gradient;
+    @apply w-10 h-10 p-3 cursor-pointer active:scale-95 transition-all rounded-full arrow-gradient z-50;
   }
 
   .tech-logo {
